Sends email for approved reservations

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=<random string>
 GOOGLE_OAUTH_CLIENT_ID=numbers-blabla.apps.googleusercontent.com
 GOOGLE_OAUTH_CLIENT_SECRET=
+NODEMAILER_EMAIL=example@example.com
+NODEMAILER_PASSWORD=password
 
 POSTGRES_PASSWORD = postgres
 POSTGRES_USER = postgres
