--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@prisma/client": "^5.6.0",
     "@types/node": "20.5.9",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "eslint": "8.48.0",
@@ -23,6 +24,7 @@
     "framer-motion": "^10.16.4",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
+    "nodemailer": "^6.9.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "ts-node": "^10.9.1",
