--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/next-js": "^2.1.5",
-    "@chakra-ui/react": "^2.8.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@chakra-ui/react": "^3.2.3",
+    "@emotion/react": "^11.14.0",
     "@prisma/client": "^5.6.0",
     "@types/node": "20.5.9",
     "@types/nodemailer": "^6.4.14",
@@ -21,13 +19,13 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "framer-motion": "^10.16.4",
     "next": "^15.0.3",
-    "next-auth": "^4.23.1",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.4",
     "nodemailer": "^6.9.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2",
     "zustand": "^4.4.3"
