--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "luxon": "^3.5.0",
     "next": "^15.0.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
@@ -30,6 +31,7 @@
     "zustand": "^4.4.3"
   },
   "devDependencies": {
+    "@types/luxon": "^3.4.2",
     "prisma": "^5.6.0"
   },
   "prisma": {
