--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.6.0",
     "@types/node": "20.5.9",
     "@types/nodemailer": "^6.4.14",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "eslint": "8.48.0",
@@ -23,6 +24,7 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.9.8",
+    "papaparse": "^5.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.4.0",
